# Bilobe

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  bilobe  install.sh  linstall.sh  main.cpp  run  sample.bi  todo.md  uninstall.sh  update.sh
include/: calc.cpp  calculations.h  customFunc.h  fileRead.h  heart.h  helpDis.h  vars.h
utils/: customFunc.h  helpDis.h  vars.h
