cmake_minimum_required(VERSION 3.0.0)
project(bilobe VERSION 1.4.0)

include_directories(include)

add_executable(bilobe main.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_PACKAGE_VENDOR "GN Vageesh")
set(CPACK_PROJECT_VENDOR "GN Vageesh")
set(CPACK_NSIS_MODIFY_PATH "ON")
set(CPACK_PACKAGE_INSTALL_REGISTRY_KEY ${PROJECT_NAME})
set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")
set(CPACK_SOURCE_GENERATOR "TGZ")
set(CPACK_NSIS_INSTALLED_ICON_NAME "${PROJECT_SOURCE_DIR}/preview/icon.ico")
set(CPACK_NSIS_MUI_ICON "${PROJECT_SOURCE_DIR}/preview/icon.ico")
set(CPACK_PACKAGE_INSTALL_REGISTRY_KEY ${PROJECT_NAME})
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "GN Vageesh")
set(CPACK_GENERATOR "DEB;TGZ;7Z")
include(CPack)

install(TARGETS bilobe DESTINATION bin)
